[BUGFIX] Sidebar reenable visible

--- a/scss/modules/_base.scss
+++ b/scss/modules/_base.scss
@@ -55,6 +55,6 @@ strong {
   font-weight: bold;
 }
 
-.hidden {
+.hide {
   display: none;
 }
